<resources>
    <string name="app_name">AutoTax</string>
    <string-array name="invoice_array">
        <item>B2B Invoice</item>
        <item>B2C large Invoice</item>
        <item>B2C small Invoice</item>
        <item>Export Invoice</item>
        <item>CDN Invoice</item>
    </string-array>
    <string-array name="const_array">
        <item>Proprietorship</item>
        <item>Partnership</item>
        <item>Hindu Undivided Family</item>
        <item>Private Limited Company</item>
        <item>Public Limited Company</item>
        <item>Society/Club/Trust/Association of Persons</item>
        <item>Government Department</item>
        <item>Public Sector Undertaking</item>
        <item>Unlimited Company</item>
        <item>LLP\'s</item>
        <item>Local Authority</item>
        <item>Statutory Body</item>
        <item>Others</item>
    </string-array>
    <string-array name="taxpayer_array">
        <item>Normal</item>
        <item>ISD</item>
        <item>TDS</item>
        <item>Compounding</item>
    </string-array>
    <string-array name="nature_array">
        <item>E-commerce Operator</item>
        <item>Factory/Manufacturing</item>
        <item>Wholesale Business</item>
        <item>Retail Business</item>
        <item>Bonded Warehouse</item>
        <item>Service Provider</item>
        <item>Office/Sale Office</item>
        <item>Leasing Business</item>
        <item>Service Recipient</item>
        <item>EOU/STP/EHTP</item>
        <item>SEZ</item>
        <item>Input Service Distributor(ISD)</item>
        <item>Works Contract</item>
        <item>Others</item>
    </string-array>
    <string-array name="status_array">
        <item>Active</item>
        <item>Inactive</item>
    </string-array>
    <string-array name="state_array">
        <item>JAMMU &amp; KASHMIR</item>
        <item>HIMACHAL PRADESH</item>
        <item>PUNJAB</item>
        <item>CHANDIGARH</item>
        <item>UTTARAKHAND</item>
        <item>HARYANA</item>
        <item>DELHI</item>
        <item>RAJASTHAN</item>
        <item>UTTAR PRADESH</item>
        <item>BIHAR</item>
        <item>SIKKIM</item>
        <item>ARUNACHAL PRADESH</item>
        <item>NAGALAND</item>
        <item>MANIPUR</item>
        <item>MIZORAM</item>
        <item>TRIPURA</item>
        <item>MEGHALAYA</item>
        <item>ASSAM</item>
        <item>WEST BENGAL</item>
        <item>JHARKHAND</item>
        <item>ODISHA</item>
        <item>CHHATISHGARH</item>
        <item>MADHYA PRADESH</item>
        <item>GUJARAT</item>
        <item>DAMAN &amp; DIU</item>
        <item>DADRA &amp; NAGAR HAVELI</item>
        <item>MAHARASHTRA</item>
        <item>KARNATAKA</item>
        <item>GOA</item>
        <item>LAKHSWADEEP</item>
        <item>KERALA</item>
        <item>TAMILNADU</item>
        <item>PUDUCHERRY</item>
        <item>ANDAMAN AND NICOBAR ISLANDS</item>
        <item>Telengana</item>
        <item>ANDHRA PRADESH</item>
        <item>Other Territory</item>
    </string-array>
    <string-array name="states_ordered">
        <item>ANDAMAN AND NICOBAR ISLANDS</item>
        <item>ANDHRA PRADESH</item>
        <item>ARUNACHAL PRADESH</item>
        <item>ASSAM</item>
        <item>BIHAR</item>
        <item>CHANDIGARH</item>
        <item>CHHATISHGARH</item>
        <item>DADRA &amp; NAGAR HAVELI</item>
        <item>DAMAN &amp; DIU</item>
        <item>DELHI</item>
        <item>GOA</item>
        <item>GUJARAT</item>
        <item>HARYANA</item>
        <item>HIMACHAL PRADESH</item>
        <item>JAMMU &amp; KASHMIR</item>
        <item>JHARKHAND</item>
        <item>KARNATAKA</item>
        <item>KERALA</item>
        <item>LAKHSWADEEP</item>
        <item>MADHYA PRADESH</item>
        <item>MAHARASHTRA</item>
        <item>MANIPUR</item>
        <item>MEGHALAYA</item>
        <item>MIZORAM</item>
        <item>NAGALAND</item>
        <item>ODISHA</item>
        <item>Other Territory</item>
        <item>PUDUCHERRY</item>
        <item>PUNJAB</item>
        <item>RAJASTHAN</item>
        <item>SIKKIM</item>
        <item>TAMILNADU</item>
        <item>TRIPURA</item>
        <item>Telengana</item>
        <item>UTTAR PRADESH</item>
        <item>UTTARAKHAND</item>
        <item>WEST BENGAL</item>
    </string-array>
    <string-array name="country_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Bhutan</item>
        <item>Brazil</item>
        <item>Cambodia</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Denmark</item>
        <item>France</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Guyana</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Korea</item>
        <item>Kuwait</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Qatar</item>
        <item>Fdgdfghfgdh</item>
        <item>Other</item>
    </string-array>
    <string-array name="disc_array">
        <item> % </item>
        <item> \u20B9 </item>
    </string-array>
    <string-array name="sup_type">
        <item>Normal</item>
        <item>Compounding</item>
        <item>SEZ</item>
        <item>Government</item>
        <item>Others</item>
    </string-array>
    <string-array name="custtaxtype">
        <item>Normal</item>
        <item>Compounding</item>
        <item>SEZ Unit</item>
        <item>SEZ Developer</item>
        <item>Government</item>
    </string-array>
    <string-array name="custtype">
        <item>Domestic</item>
        <item>International</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="mc_dir">Directories</string>
    <string name="menu_items">Items</string>
    <string name="menu_customers">Customers</string>
    <string name="menu_suppliers">Suppliers</string>
    <string name="menu_tax">Tax</string>
    <string name="mc_business_management">Business management</string>
    <string name="menu_users">User management</string>
    <string name="menu_settings">Settings</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone no</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="business_name">Business name</string>
    <string name="select_business_type">Select business type</string>
    <string name="gstin">GSTIN</string>
    <string name="business_unit_name">Business unit name</string>
    <string name="gst_username">GST username</string>
    <string name="constitution_of_business">Constitution of business</string>
    <string name="nature_of_business">Nature of business</string>
    <string name="taxpayer_type">Taxpayer type</string>
    <string name="state">State</string>
    <string name="company_logo">Company logo</string>
    <string name="status">Status</string>
    <string name="last_year_business_gross_turnover">Last Year Business Gross turnover</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_sup_info">Supplier Info</string>
</resources>