<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:fillViewport="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/but_gstin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/bue_gstin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gstin" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/but_buname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/bue_buname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/business_unit_name" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/but_gstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/bue_gstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gst_username" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/but_gover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/bue_gover"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_year_business_gross_turnover"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/business_name"
                    android:textColor="@color/colorAccent" />

                <Spinner
                    android:id="@+id/spin_busunit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/constitution_of_business"
                    android:textColor="@color/colorAccent" />

                <Spinner
                    android:id="@+id/spin_const"
                    style="@style/spinnerItemStyleWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/const_array" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/nature_of_business"
                    android:textColor="@color/colorAccent" />

                <Spinner
                    android:id="@+id/spin_nature"
                    style="@style/spinnerItemStyleWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/nature_array" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/taxpayer_type"
                    android:textColor="@color/colorAccent" />

                <Spinner
                    android:id="@+id/spin_type"
                    style="@style/spinnerItemStyleWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/taxpayer_array" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/state"
                    android:textColor="@color/colorAccent" />

                <Spinner
                    android:id="@+id/spin_state"
                    style="@style/spinnerItemStyleWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/state_array" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/company_logo"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/status"
                    android:textColor="@color/colorAccent" />

                <Spinner
                    android:id="@+id/spin_status"
                    style="@style/spinnerItemStyleWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/status_array" />

            </LinearLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right|end"
            android:layout_margin="5dp"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_save_white" />

    </FrameLayout>

</LinearLayout>